<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#0F53A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPlaylistLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/filter"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/headerView"
        app:layout_constraintEnd_toEndOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toTopOf="@+id/headerView" />

    <EditText
        android:id="@+id/artistInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/artist"
        app:layout_constraintEnd_toEndOf="@+id/headerView"
        app:layout_constraintStart_toStartOf="@+id/headerView"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <EditText
        android:id="@+id/albumInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/album"
        app:layout_constraintEnd_toEndOf="@+id/artistInput"
        app:layout_constraintStart_toStartOf="@+id/artistInput"
        app:layout_constraintTop_toBottomOf="@+id/artistInput" />

</androidx.constraintlayout.widget.ConstraintLayout>